--- a/package.json
+++ b/package.json
@@ -10,23 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.469.0",
     "mobx": "^6.15.0",
     "mobx-react-lite": "^4.1.0",
     "motion": "^12.0.0",
-    "lucide-react": "^0.469.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.0",
-    "typescript": "~5.6.0",
-    "vite": "^6.0.0",
-    "prettier-plugin-tailwindcss": "^0.7.2",
+    "daisyui": "^5.0.0",
     "prettier": "^3.8.0",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^4.0.0",
-    "@tailwindcss/vite": "^4.0.0",
-    "daisyui": "^5.0.0"
+    "typescript": "~5.6.0",
+    "vite": "^6.0.0"
   }
 }
